crates/squawk/src/snapshots/squawk__reporter__test_reporter__display_violations_tty_and_github_annotations.snap
---
source: crates/squawk/src/reporter.rs
expression: "strip_ansi_codes(&String::from_utf8_lossy(&buff))"
---
::warning file=main.sql,line=2,col=3,endLine=2,endColumn=63,title=require-lock-timeout::Missing `set lock_timeout` before potentially slow ACCESS EXCLUSIVE lock operations
::warning file=main.sql,line=2,col=3,endLine=2,endColumn=63,title=require-statement-timeout::Missing `set statement_timeout` before potentially slow operations
::warning file=main.sql,line=2,col=29,endLine=2,endColumn=62,title=adding-required-field::Adding a new column that is `NOT NULL` and has no default value to an existing table effectively makes it required.
::warning file=main.sql,line=2,col=29,endLine=2,endColumn=62,title=prefer-robust-stmts::Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.
::warning file=main.sql,line=2,col=46,endLine=2,endColumn=53,title=prefer-bigint-over-int::Using 32-bit integer fields can result in hitting the max `int` limit.
::warning file=main.sql,line=5,col=2,endLine=6,endColumn=20,title=adding-required-field::Adding a new column that is `NOT NULL` and has no default value to an existing table effectively makes it required.
::warning file=main.sql,line=5,col=2,endLine=6,endColumn=20,title=prefer-robust-stmts::Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.
::warning file=main.sql,line=6,col=4,endLine=6,endColumn=11,title=prefer-bigint-over-int::Using 32-bit integer fields can result in hitting the max `int` limit.
warning[]8;;https://squawkhq.com/docs/require-lock-timeout\require-lock-timeout]8;;\]: Missing `set lock_timeout` before potentially slow ACCESS EXCLUSIVE lock operations
  ╭▸ main.sql:2:4
  │
2 │    ALTER TABLE "core_recipe" ADD COLUMN "foo" integer NOT NULL;
  │    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ├ help: Configure a `lock_timeout` before this statement. Statement requires: ACCESS EXCLUSIVE lock; blocking: reads, writes, schema changes.
  ╭╴
2 +    set lock_timeout = '1s';
  ╰╴
warning[]8;;https://squawkhq.com/docs/require-statement-timeout\require-statement-timeout]8;;\]: Missing `set statement_timeout` before potentially slow operations
  ╭▸ main.sql:2:4
  │
2 │    ALTER TABLE "core_recipe" ADD COLUMN "foo" integer NOT NULL;
  │    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ├ help: Configure a `statement_timeout` before this statement
  ╭╴
2 +    set statement_timeout = '5s';
  ╰╴
warning[]8;;https://squawkhq.com/docs/adding-required-field\adding-required-field]8;;\]: Adding a new column that is `NOT NULL` and has no default value to an existing table effectively makes it required.
  ╭▸ main.sql:2:30
  │
2 │    ALTER TABLE "core_recipe" ADD COLUMN "foo" integer NOT NULL;
  │                              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ╰ help: Make the field nullable or add a non-VOLATILE DEFAULT
warning[]8;;https://squawkhq.com/docs/prefer-robust-stmts\prefer-robust-stmts]8;;\]: Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.
  ╭▸ main.sql:2:30
  │
2 │    ALTER TABLE "core_recipe" ADD COLUMN "foo" integer NOT NULL;
  │                              ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  ╭╴
2 │    ALTER TABLE "core_recipe" ADD COLUMN if not exists "foo" integer NOT NULL;
  ╰╴                                        +++++++++++++
warning[]8;;https://squawkhq.com/docs/prefer-bigint-over-int\prefer-bigint-over-int]8;;\]: Using 32-bit integer fields can result in hitting the max `int` limit.
  ╭▸ main.sql:2:47
  │
2 │    ALTER TABLE "core_recipe" ADD COLUMN "foo" integer NOT NULL;
  │                                               ━━━━━━━
  │
  ├ help: Use 64-bit integer values instead to prevent hitting this limit.
  ╭╴
2 -    ALTER TABLE "core_recipe" ADD COLUMN "foo" integer NOT NULL;
2 +    ALTER TABLE "core_recipe" ADD COLUMN "foo" bigint NOT NULL;
  ╰╴
warning[]8;;https://squawkhq.com/docs/adding-required-field\adding-required-field]8;;\]: Adding a new column that is `NOT NULL` and has no default value to an existing table effectively makes it required.
  ╭▸ main.sql:5:3
  │
5 │ ┏   ADD COLUMN "bar" 
6 │ ┃     integer NOT NULL;
  │ ┗━━━━━━━━━━━━━━━━━━━━┛
  │
  ╰ help: Make the field nullable or add a non-VOLATILE DEFAULT
warning[]8;;https://squawkhq.com/docs/prefer-robust-stmts\prefer-robust-stmts]8;;\]: Missing `IF NOT EXISTS`, the migration can't be rerun if it fails part way through.
  ╭▸ main.sql:5:3
  │
5 │ ┏   ADD COLUMN "bar" 
6 │ ┃     integer NOT NULL;
  │ ┗━━━━━━━━━━━━━━━━━━━━┛
  ╭╴
5 │   ADD COLUMN if not exists "bar" 
  ╰╴             +++++++++++++
warning[]8;;https://squawkhq.com/docs/prefer-bigint-over-int\prefer-bigint-over-int]8;;\]: Using 32-bit integer fields can result in hitting the max `int` limit.
  ╭▸ main.sql:6:5
  │
6 │     integer NOT NULL;
  │     ━━━━━━━
  │
  ├ help: Use 64-bit integer values instead to prevent hitting this limit.
  ╭╴
6 -     integer NOT NULL;
6 +     bigint NOT NULL;
  ╰╴

Find detailed examples and solutions for each rule at https://squawkhq.com/docs/rules
Found 8 issues in 1 file (checked 1 source file)
